# lemonVM

./: LemonVM.hpp  LemonVM.org
examples/: cube-of-7.hl
src/: Compile.hpp  Defs.hpp  Eval.hpp  InstructionSet.hpp  Lexer.hpp
tst/: CMakeLists.txt  main.cpp
